# stringology-rust

./: Cargo.toml  README.md  compute_stats.sh  gen_artificial.sh
.github/workflow/: test.yml
.github/workflows/: cargo.yml
src/: bwt.rs  common.rs  core.rs  core_test.rs  count_lexparse.rs  count_r.rs  count_runs.rs  count_sigma.rs  count_z.rs  datastructures.rs  debruijn.rs  entropy.rs  entropy_kmer.rs  enumerate_lexparse.rs  escape.rs  fibonacci.rs  io.rs  kolakoski.rs  lib.rs  lyndonfactorization.rs  minsubstring.rs  mtf.rs  paperfolding.rs  parallel.rs  perioddoubling.rs  randomstring.rs  reverse.rs  rle.rs  test.rs  thuemorse.rs  word.rs
src/tests/: core_test.rs
src/unfinished/: parallel.rs
