[package]
name = "stringenerators"
version = "0.1.0"
authors = ["Dominik Köppl <dominik.koeppl@uni-dortmund.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
more-asserts = "0.2.1"
byte_string = "1.0.0"
cdivsufsort = "2.0.0"
log = "0.4.0"
env_logger = "0.8.3"
clap = "3.0.0-beta.2"
num = "0.1"
segment-tree = "2"
rand = "0.8.1"

[[bin]]
name = "fibonacci"
path = "src/fibonacci.rs"

[[bin]]
name = "thuemorse"
path = "src/thuemorse.rs"

[[bin]]
name = "count_r"
path = "src/count_r.rs"

[[bin]]
name = "count_z"
path = "src/count_z.rs"

[[bin]]
name = "count_sigma"
path = "src/count_sigma.rs"
