[package]
name = "stringology"
version = "0.1.0"
authors = ["Dominik Köppl <dominik.koeppl@uni-dortmund.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
more-asserts = "0.2.1"
byte_string = "1.0.0"
cdivsufsort = "2.0.0"
log = "0.4.0"
env_logger = "0.8.3"
clap = "3.0.0-beta.2"
num = "0.1"
segment-tree = "2"
rand = "0.8.1"
approx = "0.5.0"
no_deadlocks = { vesion = "=1.2.0"}


[[test]]
name = "core-test"
path = "src/core_test.rs"

[[bin]]
name = "bwt"
path = "src/bwt.rs"

[[bin]]
name = "mtf"
path = "src/mtf.rs"

[[bin]]
name = "count_runs"
path = "src/count_runs.rs"

[[bin]]
name = "fibonacci"
path = "src/fibonacci.rs"

[[bin]]
name = "perioddoubling"
path = "src/perioddoubling.rs"

[[bin]]
name = "kolakoski"
path = "src/kolakoski.rs"

[[bin]]
name = "thuemorse"
path = "src/thuemorse.rs"

[[bin]]
name = "paperfolding"
path = "src/paperfolding.rs"

[[bin]]
name = "count_r"
path = "src/count_r.rs"

[[bin]]
name = "count_z"
path = "src/count_z.rs"

[[bin]]
name = "count_lexparse"
path = "src/count_lexparse.rs"

[[bin]]
name = "count_sigma"
path = "src/count_sigma.rs"

[[bin]]
name = "lyndonfactorization"
path = "src/lyndonfactorization.rs"

[[bin]]
name = "debruijn"
path = "src/debruijn.rs"

[[bin]]
name = "entropy"
path = "src/entropy.rs"

[[bin]]
name = "entropykmer"
path = "src/entropy_kmer.rs"

[[bin]]
name = "escape"
path = "src/escape.rs"

[[bin]]
name = "reverse"
path = "src/reverse.rs"

[[bin]]
name = "parallel"
path = "src/parallel.rs"
