[package]
name = "stringology"
version = "0.1.0"
authors = ["Dominik Köppl <dominik.koeppl@uni-dortmund.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
more-asserts = "0.3.1"
byte_string = "1.0.0"
cdivsufsort = "2.0.0"
log = "0.4.0"
env_logger = "0.9.1"
clap = { version = "4.0.11", features = ["derive"] }
num = "0.4.0"
segment-tree = "2"
rand = "0.8.1"
approx = "0.5.0"
no_deadlocks = { vesion = "=1.2.0"}
generator = "0.7"
itertools = "0.10.3"
succinct = "0.5.2"


[[test]]
name = "core-test"
path = "src/tests/core_test.rs"

# [[bin]]
# name = "parallel"
# path = "src/parallel.rs"
